[PATCH] add driver for Open Cores' Ethernet device
This driver requires to define the following macros:

OETH_IRQ			interrupt number
OETH_REQUEST_IRQ_FLAG		interrupt flags
OETH_BASE_ADDR			base address of the registers
OETH_SRAM_BUFF_BASE		base address for data buffers and descriptors
OETH_RXBD_NUM			number of receive descriptors
OETH_TXBD_NUM			number of transmit descriptors
OETH_RX_BUFF_SIZE		buffer size for receive buffers
OETH_TX_BUFF_SIZE		buffer size for transmit buffers
OETH_PHY_ID			PHY address
OETH_PLATFORM_SPECIFIC_INIT(r)	function for platform specific initialization

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -548,6 +548,11 @@ config HAPPYMEAL
 	  To compile this driver as a module, choose M here: the module
 	  will be called sunhme.
 
+config OPENCORES_ETHERNET
+       tristate "Opencores.org Ethernet MAC driver"
+       depends on NET_ETHERNET
+       help
+	  
 config SUNBMAC
 	tristate "Sun BigMAC 10/100baseT support (EXPERIMENTAL)"
 	depends on SBUS && EXPERIMENTAL
