--- a/arch/xtensa/Kconfig
+++ b/arch/xtensa/Kconfig
@@ -117,11 +117,19 @@ config XTENSA_PLATFORM_XT2000
 	  XT2000 is the name of Tensilica's feature-rich emulation platform.
 	  This hardware is capable of running a full Linux distribution.
 
+config XTENSA_PLATFORM_LX60
+	bool "LX60"
+	select OPENCORES_ETHERNET
+	help
+	  LX60 is the name of the new Tensilica board. 
+	  This hardware is capable of running a full Linux distribution.
+
 endchoice
 
 
 config XTENSA_CALIBRATE_CCOUNT
-	bool "Auto calibration of the CPU clock rate"
+       depends on !XTENSA_PLATFORM_LX60
+	bool "Auto calibration of the CPU clock rate" if !XTENSA_PLATFORM_LX60
 	---help---
 	  On some platforms (XT2000, for example), the CPU clock rate can
 	  vary.  The frequency can be determined, however, by measuring
@@ -168,8 +176,8 @@ endmenu
 menu "Bus options"
 
 config PCI
-	bool "PCI support" if !XTENSA_PLATFORM_ISS
-	depends on !XTENSA_PLATFORM_ISS
+	bool "PCI support" if !XTENSA_PLATFORM_ISS || !XTENSA_PLATFORM_LX60
+	depends on !XTENSA_PLATFORM_ISS || !XTENSA_PLATFORM_LX60
 	default y
 	help
 	  Find out whether you have a PCI motherboard. PCI is the name of a
