--- a/arch/xtensa/Makefile
+++ b/arch/xtensa/Makefile
@@ -3,7 +3,7 @@
 # License.  See the file "COPYING" in the main directory of this archive
 # for more details.
 #
-# Copyright (C) 2001 - 2005  Tensilica Inc.
+# Copyright (C) 2001 - 2007  Tensilica Inc.
 #
 # This file is included by the global makefile so that you can add your own
 # architecture-specific flags and dependencies. Remember to do have actions
@@ -11,14 +11,32 @@
 # this architecture
 
 # Core configuration.
-# (Use VAR=<xtensa_config> to use another default compiler.)
 
-variant-$(CONFIG_XTENSA_VARIANT_FSF)		:= fsf
-variant-$(CONFIG_XTENSA_VARIANT_DC232L)		:= dc232l
-variant-$(CONFIG_XTENSA_VARIANT_LINUX_CUSTOM)	:= custom
+VARIANT := $(strip $(subst ", ,$(CONFIG_XTENSA_VARIANT_NAME)))
 
-VARIANT = $(variant-y)
-export VARIANT
+ifeq ($(strip $(VARIANT)),)
+ifeq ($(CONFIG_XTENSA_VARIANT_CUSTOM),y)
+$(error Xtensa processor variant name cannot be empty.)
+endif
+#  We are being invoked without config info (e.g. during 'make menuconfig').
+#  However we need config info to know which Xtensa toolchain to invoke.
+#  Is a working CC important at this point?
+#  (The top-level Makefile may invoke CC via cc-option -- does its
+#   derivation persist?...)
+#  We don't yet know the VARIANT name (e.g. when invoking 'make menuconfig').
+#  In this case, just select any toolchain found on the PATH:
+somegcc := $(firstword $(wildcard $(addsuffix /xtensa_*-linux*-gcc,$(subst :, ,$(PATH)))))
+ifeq ($(somegcc),)
+$(error No Xtensa toolchain found on PATH.)
+else
+VARIANT := $(subst xtensa_,,$(word 1,$(subst -, ,$(notdir $(somegcc)))))
+# $(warning Picked variant .$(VARIANT).)
+endif
+endif
+
+fullarch := xtensa_$(VARIANT)
+UTS_MACHINE := $(fullarch)
+# $(warning Selected arch $(fullarch).)
 
 # Platform configuration
 
@@ -44,19 +62,17 @@ core-$(CONFIG_EMBEDDED_RAMDISK)	+= arch/xtensa/boot/ramdisk/
 
 # Test for cross compiling
 
-ifneq ($(VARIANT),)
-  COMPILE_ARCH = $(shell uname -m)
-
-  ifneq ($(COMPILE_ARCH), xtensa)
-    ifndef CROSS_COMPILE
-      CROSS_COMPILE = xtensa_$(VARIANT)-
-    endif
+ifneq ($(SUBARCH),$(ARCH))
+  ifeq ($(CROSS_COMPILE),)
+    CROSS_COMPILE := $(call cc-cross-prefix, $(fullarch)-linux-uclibc-  $(fullarch)-linux-gnu-)
   endif
 endif
 
 #
 
+ifneq ($(strip $(VARIANT)),)
 LIBGCC := $(shell $(CC) $(KBUILD_CFLAGS) -print-libgcc-file-name)
+endif
 
 head-y		:= arch/xtensa/kernel/head.o
 core-y		+= arch/xtensa/kernel/ arch/xtensa/mm/
